// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Maxi hover simple actions Divider shadow 1`] = `
[
  {
    "action": "hover",
    "attributes": {
      "divider-box-shadow-blur-general": 44,
      "divider-box-shadow-blur-unit-general": "px",
      "divider-box-shadow-horizontal-general": 22,
      "divider-box-shadow-horizontal-unit-general": "px",
      "divider-box-shadow-inset-general": false,
      "divider-box-shadow-palette-color-general": 8,
      "divider-box-shadow-palette-opacity-general": 0.11,
      "divider-box-shadow-palette-sc-status-general": false,
      "divider-box-shadow-palette-status-general": true,
      "divider-box-shadow-spread-general": 55,
      "divider-box-shadow-spread-unit-general": "px",
      "divider-box-shadow-vertical-general": 33,
      "divider-box-shadow-vertical-unit-general": "px",
    },
    "css": {
      "general": {
        "breakpoint": null,
        "styles": {
          "box-shadow": "22px 33px 44px 55px rgba(var(--maxi-light-color-8,150,176,203),0.11)",
        },
      },
    },
    "effects": {
      "easing-general": "ease",
      "transition-delay-general": 0,
      "transition-duration-general": 0.3,
      "transition-status-general": true,
    },
    "id": 1,
    "isButton": true,
    "sid": "dbs",
    "target": " .maxi-divider-block__divider",
    "title": "Hello World!",
    "uniqueID": "divider-maxi-1se8ef1z-u",
  },
]
`;

exports[`Divider Maxi hover simple actions Divider shadow 2`] = `" body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { box-shadow: 22px 33px 44px 55px rgba(var(--maxi-light-color-8,150,176,203),0.11);}"`;

exports[`Divider Maxi hover simple actions Divider shadow 3`] = `"body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { transition: all 0s ease 0s, box-shadow 0.3s ease 0s;}"`;

exports[`Divider Maxi hover simple actions Divider shadow 4`] = `"body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { transition: all 0s ease 0s, box-shadow 0.3s ease 0s;}"`;

exports[`Divider Maxi hover simple actions Line settings 1`] = `
[
  {
    "action": "hover",
    "attributes": {
      "divider-border-palette-color-general": 8,
      "divider-border-palette-opacity-general": 0.5,
      "divider-border-palette-sc-status-general": false,
      "divider-border-palette-status-general": true,
      "divider-border-right-width-general": 22,
      "divider-border-style-general": "dashed",
      "divider-border-top-width-general": 22,
      "divider-width-general": 11,
      "divider-width-unit-general": "%",
      "line-orientation-general": "horizontal",
    },
    "css": {
      "general": {
        "breakpoint": null,
        "styles": {
          "border-color": "var(--maxi-light-divider-color,rgba(var(--maxi-light-color-8,150,176,203),0.5))",
          "border-right-style": "none",
          "border-top-style": "dashed",
          "border-top-width": "22px",
          "height": "22px",
          "width": "11%",
        },
      },
    },
    "effects": {
      "easing-general": "ease",
      "transition-delay-general": 0,
      "transition-duration-general": 0.3,
      "transition-status-general": true,
    },
    "id": 1,
    "isButton": true,
    "sid": "dls",
    "target": " .maxi-divider-block__divider",
    "title": "Hello World!",
    "uniqueID": "divider-maxi-1se8ef1z-u",
  },
]
`;

exports[`Divider Maxi hover simple actions Line settings 2`] = `" body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { width: 11%; height: 22px; border-top-width: 22px; border-right-style: none; border-top-style: dashed; border-color: var(--maxi-light-divider-color,rgba(var(--maxi-light-color-8,150,176,203),0.5));}"`;

exports[`Divider Maxi hover simple actions Line settings 3`] = `"body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { transition: all 0s ease 0s, border-color 0.3s ease 0s, border-top-style 0.3s ease 0s, border-right-style 0.3s ease 0s, border-top-width 0.3s ease 0s, height 0.3s ease 0s, width 0.3s ease 0s;}"`;

exports[`Divider Maxi hover simple actions Line settings 4`] = `"body.maxi-blocks--active #divider-maxi-1se8ef1z-u[data-maxi-relations="true"] .maxi-divider-block__divider { transition: all 0s ease 0s, border-color 0.3s ease 0s, border-top-style 0.3s ease 0s, border-right-style 0.3s ease 0s, border-top-width 0.3s ease 0s, height 0.3s ease 0s, width 0.3s ease 0s;}"`;
